--- a/templates/api/update_abs.html
+++ b/templates/api/update_abs.html
@@ -1,6 +1,6 @@
 {
-  "id": "5d7aa615-acb1-47fd-b8e1-f97bc66274a8",
-  "description": "删除栏目:[44198877]硬骨头 41-信息成功",
+  "id": "5d7aa615-acb1-47fd-b8e1-f97bc66074a8",
+  "description": "批量修改1500栏目成功",
   "time": "2018-02-02 00:11:21",
   "data": [
       {% for i in list %}
